--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,13 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.10.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "toastify": "^2.0.1",
     "web-vitals": "^2.1.4",
