--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
+    "nodemon": "^3.1.10",
     "validator": "^13.15.0"
   }
 }
