--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.0",
     "toastify": "^2.0.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
