--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
